--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,53 +1,32 @@
-FROM node:18-alpine AS base
-
-# Install dependencies only when needed
-FROM base AS deps
+# Stage 1: Build the Next.js application
+FROM node:18 AS builder
 WORKDIR /app
+
+# Copy package.json and install dependencies
 COPY package.json package-lock.json ./
-RUN npm ci
+RUN npm install
 
-# Rebuild the source code only when needed
-FROM base AS builder
-WORKDIR /app
-COPY --from=deps /app/node_modules ./node_modules
+# Copy application files
 COPY . .
 
-# Next.js collects completely anonymous telemetry data about general usage.
-# Learn more here: https://nextjs.org/telemetry
-# Uncomment the following line in case you want to disable telemetry during the build.
-ENV NEXT_TELEMETRY_DISABLED 1
-
-# Build the application
+# Build the Next.js application in standalone mode
 RUN npm run build
 
-# Production image, copy all the files and run next
-FROM base AS runner
+# Stage 2: Create the final container
+FROM node:18
 WORKDIR /app
 
-ENV NODE_ENV production
-ENV NEXT_TELEMETRY_DISABLED 1
+# Create a non-root user
+RUN addgroup --system --gid 1001 nextjs && \
+    adduser --system --uid 1001 nextjs && \
+    chown -R nextjs:nextjs /app
 
-RUN addgroup --system --gid 1001 nodejs
-RUN adduser --system --uid 1001 nextjs
-
+# Copy necessary files from the builder stage
+COPY --from=builder /app/.next/standalone ./  # Fixing reference
 COPY --from=builder /app/public ./public
-
-# Set the correct permission for prerender cache
-RUN mkdir .next
-RUN chown nextjs:nodejs .next
-
-# Automatically leverage output traces to reduce image size
-COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
-COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+COPY --from=builder /app/.next/static ./.next/static
 
 USER nextjs
-
 EXPOSE 3000
-
-ENV PORT 3000
-
-# Environment variables must be redefined at runtime
-# The NEXT_PUBLIC_ prefix makes them available to the browser
-ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
 
 CMD ["node", "server.js"]
