--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,62 +1,34 @@
-# Stage 1: Dependencies
-FROM node:18-alpine AS deps
+# Use Node.js 18 as the base image
+FROM node:18-alpine
+
+# Set working directory
 WORKDIR /app
 
 # Copy package files
 COPY package.json package-lock.json ./
+
+# Install dependencies
 RUN npm ci
 
-# Stage 2: Builder
-FROM node:18-alpine AS builder
-WORKDIR /app
-
-# Copy dependencies
-COPY --from=deps /app/node_modules ./node_modules
+# Copy the rest of the application code
 COPY . .
 
 # Create public directory if it doesn't exist
 RUN mkdir -p ./public
 
-# Set environment variables for build
-ENV NEXT_TELEMETRY_DISABLED 1
-ENV NODE_ENV production
+# Set environment variables
+ENV NODE_ENV=production
+ENV NEXT_TELEMETRY_DISABLED=1
 
 # Build the application
 RUN npm run build
 
-# Stage 3: Runner
-FROM node:18-alpine AS runner
-WORKDIR /app
-
-# Set environment variables
-ENV NODE_ENV production
-ENV NEXT_TELEMETRY_DISABLED 1
-
-# Create non-root user
-RUN addgroup --system --gid 1001 nodejs
-RUN adduser --system --uid 1001 nextjs
-
-# Create .next directory with proper permissions
-RUN mkdir .next
-RUN chown nextjs:nodejs .next
-
-# Copy necessary files from builder
-COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
-COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
-
-# Create public directory and copy contents
-RUN mkdir -p ./public
-COPY --from=builder --chown=nextjs:nodejs /app/public ./public
-
-# Switch to non-root user
-USER nextjs
-
 # Expose port
 EXPOSE 3000
-ENV PORT 3000
+ENV PORT=3000
 
 # Environment variables for API URL
 ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
 
 # Start the server
-CMD ["node", "server.js"]
+CMD ["npm", "start"]
