new dockerfile frontend

--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -27,10 +27,10 @@ jobs:
         docker build -t ${{ secrets.REGISTRY_URL }}/sacred6-backend:${{ github.ref_name || 'manual' }} .
         docker tag ${{ secrets.REGISTRY_URL }}/sacred6-backend:${{ github.ref_name || 'manual' }} ${{ secrets.REGISTRY_URL }}/sacred6s-backend:latest
 
-    # Stap 4: Push de Docker-image voor de backend
-    # - name: Push Backend Docker Image
-    #   run: |
-    #     docker push ${{ secrets.REGISTRY_URL }}/sacred6-backend:${{ github.ref_name || 'manual' }}
+    Stap 4: Push de Docker-image voor de backend
+    - name: Push Backend Docker Image
+      run: |
+        docker push ${{ secrets.REGISTRY_URL }}/sacred6-backend:${{ github.ref_name || 'manual' }}
     #     docker push ${{ secrets.REGISTRY_URL }}/sacred6-backend:latest
 
   frontend:
@@ -53,8 +53,8 @@ jobs:
         docker build -t ${{ secrets.REGISTRY_URL }}/sacred6-frontend:${{ github.ref_name || 'manual' }} .
         docker tag ${{ secrets.REGISTRY_URL }}/sacred6-frontend:${{ github.ref_name || 'manual' }} ${{ secrets.REGISTRY_URL }}/sacred6-frontend:latest
 
-    # Stap 4: Push de Docker-image voor de frontend
-    # - name: Push Frontend Docker Image
-    #   run: |
-    #     docker push ${{ secrets.REGISTRY_URL }}/sacred6-frontend:${{ github.ref_name || 'manual' }}
+    Stap 4: Push de Docker-image voor de frontend
+    - name: Push Frontend Docker Image
+      run: |
+        docker push ${{ secrets.REGISTRY_URL }}/sacred6-frontend:${{ github.ref_name || 'manual' }}
     #     docker push ${{ secrets.REGISTRY_URL }}/sacred6-frontend:latest
