new dockerfile frontend

--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -27,7 +27,7 @@ jobs:
         docker build -t ${{ secrets.REGISTRY_URL }}/sacred6-backend:${{ github.ref_name || 'manual' }} .
         docker tag ${{ secrets.REGISTRY_URL }}/sacred6-backend:${{ github.ref_name || 'manual' }} ${{ secrets.REGISTRY_URL }}/sacred6s-backend:latest
 
-    Stap 4: Push de Docker-image voor de backend
+    # Stap 4: Push de Docker-image voor de backend
     - name: Push Backend Docker Image
       run: |
         docker push ${{ secrets.REGISTRY_URL }}/sacred6-backend:${{ github.ref_name || 'manual' }}
@@ -53,7 +53,7 @@ jobs:
         docker build -t ${{ secrets.REGISTRY_URL }}/sacred6-frontend:${{ github.ref_name || 'manual' }} .
         docker tag ${{ secrets.REGISTRY_URL }}/sacred6-frontend:${{ github.ref_name || 'manual' }} ${{ secrets.REGISTRY_URL }}/sacred6-frontend:latest
 
-    Stap 4: Push de Docker-image voor de frontend
+    # Stap 4: Push de Docker-image voor de frontend
     - name: Push Frontend Docker Image
       run: |
         docker push ${{ secrets.REGISTRY_URL }}/sacred6-frontend:${{ github.ref_name || 'manual' }}
