--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -16,6 +16,11 @@ COPY . .
 # Create public directory if it doesn't exist
 RUN mkdir -p ./public
 
+
+# Set environment variables (at build time)
+ARG NEXT_PUBLIC_API_URL
+ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
+
 # Set environment variables
 ENV NODE_ENV=production
 ENV NEXT_TELEMETRY_DISABLED=1
