--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=5000
-      - MONGO_URI=mongodb://mongodb:27017/sacred6
+      - MONGODB_URI=mongodb://mongodb:27017/sacred6
       # For container-to-container communication
       - FRONTEND_URL=http://frontend:3000
       # For external access
