--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "next": "13.4.19",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
+    "react-day-picker": "^9.6.3",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
