--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -37,4 +37,6 @@ EXPOSE 3000
 ENV PORT=3000
 
 # Start the server
-CMD ["npm", "start"]
+#CMD ["npm", "start"]
+# Start the server
+CMD ["npm", "dev"]
